# python-web

./: README.md
backend-fastapi/: pyproject.toml
backend-fastapi/src/: run.py
backend-fastapi/src/app/: __init__.py  app.py  main.py
backend-fastapi/src/app/api/: __init__.py
backend-fastapi/src/app/api/v1/: __init__.py  permission_apis.py  role_apis.py  user_apis.py
backend-fastapi/src/app/config/: __init__.py  app.py  base.py  database.py  logging.py  settings.py
backend-fastapi/src/app/core/: app_init.py  crud.py  exception_handlers.py
backend-fastapi/src/app/enum/: MenuType.py
backend-fastapi/src/app/logging/: __init__.py  logging.py
backend-fastapi/src/app/model/: __init__.py  models.py
backend-fastapi/src/app/models/: __init__.py  tables.py
backend-fastapi/src/app/schema/: api_response.py  user_schemas.py
backend-fastapi/src/app/service/: __init__.py  user_service.py
backend-fastapi/src/app/util/: pwd_utils.py
backend-fastapi/src/backend_fastapi/model/: __init__.py  base.py  manage.py  tables.py
